# conway

./: CMakeLists.txt  README.txt
inc/: GridWorld.h
src/: GridWorld.cpp  conway.cpp
tests/: test.cpp
worlds/: glider.txt
